--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 
 
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Roboto+Condensed:wght@400;700|Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 html {
   font-size: 100%;
