--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,5 +16,24 @@ html {
   padding: 0.5rem 1.25rem;
 }
 
+.alert {
+  padding: 0.375rem 0.75rem;
+  text-align: center; 
+  margin-bottom: 1rem;
+  border-color: transparent;
+  border-radius: var(--borderRadius);
+ 
+  letter-spacing: var(--letterSpacing);
+}
+
+.alert-danger {
+  color: var(--red-dark);
+  background: var(--red-light);
+}
+.alert-success {
+  color: var(--green-dark);
+  background: var(--green-light);
+}
+
 
 
