--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,38 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-html {
-  font-size: 100%;
-} /*16px*/
+.overlay {
+  @apply fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center z-50 transition-all duration-300 ease-in-out;
+}
+
+
+.panel {
+  @apply bg-white rounded-sm p-8 relative flex flex-col items-center;
+}
+
+.overlay-btn {
+  @apply absolute top-10 left-10 bg-transparent border-transparent text-2xl text-red-600 cursor-pointer;
+}
+
 
 .btn-hero {
   font-size: 1.25rem;
   padding: 0.5rem 1.25rem;
 }
-
-.alert {
-  padding: 0.375rem 0.75rem;
-  text-align: center; 
-  margin-bottom: 1rem;
-  border-color: transparent;
-  border-radius: var(--borderRadius);
- 
-  letter-spacing: var(--letterSpacing);
-}
-
-.alert-danger {
-  color: var(--red-dark);
-  background: var(--red-light);
-}
-.alert-success {
-  color: var(--green-dark);
-  background: var(--green-light);
-}
-
-
-
