--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,5 +40,248 @@
 }
 
 
+.job-card{
+  background: #D3D3D3
+;
+  border-radius: 0.25rem;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+  0 2px 4px -1px rgba(0, 0, 0, 0.06);;
+}
+
+.card-header{
+  padding: 1rem 1.5rem;
+    border-bottom: 1px solid #71716F;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    h5 {
+      letter-spacing: 0;
+  
+  }  
+  }
+
+.main-icon{
+  width: 60px;
+    height: 60px;
+    display: grid;
+    place-items: center;
+    background: #2cb1bc;
+    border-radius: 0.25rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+    margin-right: 2rem;
+}
+
+
+.info {
+    h5 {
+      margin-bottom: 0.25rem;
+    }
+    p {
+      margin: 0;
+      text-transform: capitalize;
+      color: #38bec9;
+      letter-spacing: var(--letterSpacing);
+    }
+  }
+
+  .applied {
+    background: #fcefc7;
+    color: #e9b949;
+  }
+  .interview {
+    background: #e0e8f9;
+    color: #647acb;
+  }
+  .rejected {
+    color: #d66a6a;
+    background: #ffeeee;
+  }
+  .offer{
+    color: #2cb1bc;
+    background: #e0f7f7;}
+
+  .content {
+    padding: 1rem 1.5rem;
+    display: flex;
+    justify-content: space-between; 
+
+  }
+  .content-center {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 0.5rem;
+    @media (min-width: 576px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media (min-width: 992px) {
+      grid-template-columns: 1fr;
+    }
+    @media (min-width: 1120px) {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  .status {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 0.25rem;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  text-align: center;
+  width: 100px;
+  height: 30px;
+  align-self: flex-end;
+}
+
+  footer {
+    margin-top: 1rem;
+  }
+
+
+  .job-wrapper{
+    margin-top: 4rem;
+  }
+
+
+  .jobs {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
+
+  .info-wrapper{
+    margin-top: 0.5rem;
+  display: flex;
+  align-items: center;
+  }
+   .info-icon {
+    font-size: 1rem;
+    margin-right: 1rem;
+    display: flex;
+    align-items: center;
+    svg {
+      color: var(--grey-400);
+    }
+  }
+  .info-text {
+    text-transform: capitalize;
+    letter-spacing: var(--letterSpacing);
+  }
+
+  .left-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.right-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 1rem; 
+}
+
+.date-status {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+.status {
+  border-radius: var(--borderRadius);
+  text-transform: capitalize;
+  letter-spacing: var(--letterSpacing);
+  text-align: center;
+  width: 100px;
+  height: 30px;
+  margin-top: 0.5rem; 
+}
+
+.btn {
+  cursor: pointer;
+  color: #fff;
+  background: #2cb1bc;
+  border: transparent;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+  0 2px 4px -1px rgba(0, 0, 0, 0.06);;
+  transition: 0.3s ease-in-out all;
+  text-transform: capitalize;
+  display: inline-block;
+}
+
+.main-icon {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.25rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #fff;
+  margin-right: 2rem;
+}
+
+.star {
+  background-color: #F3C61E;
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
+}
+
+.diamond {
+  background-color: #EE5A24;
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
+.circle {
+  background-color: #3CB3AB;
+  border-radius: 50%;
+}
+
+.square {
+  background-color: #4B4E6D;
+}
+
+
+  @media (min-width: 992px) {
+    .jobs {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+    }
+    .right-info {
+      margin-left: 5rem;
+    }
+
+  }
+
+  @media screen and (min-width: 675px) and (max-width: 1023px) {
+    .right-info {
+      margin-left: 8rem;
+    }
+}
 
 
