background shape is correspoding to job status, changed rejected to a softer decliend haha

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -97,7 +97,7 @@
     background: #e0e8f9;
     color: #647acb;
   }
-  .rejected {
+  .declined {
     color: #d66a6a;
     background: #ffeeee;
   }
