--- a/client/src/index.css
+++ b/client/src/index.css
@@ -280,6 +280,19 @@
   border-color: #ef4444;
 }
 
+.chart-container {
+  width: 100%;
+  height: 300px; /* Default height for smaller screens */
+}
+
+@media (min-width: 1024px) { /* Adjust the breakpoint value according to your design */
+  .chart-container {
+    height: 600px; /* Taller height for larger screens */
+  }
+}
+
+
+
 
 
 
@@ -294,6 +307,8 @@
     }
 
   }
+
+
 
 
 
