--- a/client/src/index.css
+++ b/client/src/index.css
@@ -280,6 +280,12 @@
   border-color: #ef4444;
 }
 
+.green {
+  color: #10b981;
+  border-color: #10b981;
+}
+
+
 .chart-container {
   width: 100%;
   height: 300px; /* Default height for smaller screens */
@@ -292,13 +298,13 @@
     height: 40px;
     font-weight: 700;
     font-size: 1.25rem;
-    color: #627d98;
+    color: #16123F;
     transition: 0.3s ease-in-out all;
     border-radius: 0.25rem;
     cursor: pointer;
   }
   .active {
-    background: #627d98;
+    background: #16123F;
     color: #fff;
   }
 
